--- a/src/js/components/Main/App.css
+++ b/src/js/components/Main/App.css
@@ -1,19 +1,8 @@
-@import 'variable.css';
-
-.App {
+.app {
   display: flex;
   flex-direction: column;
   width: 100vw;
   height: 100vh;
   color: white;
   transition: background-color .5s;
-
-  &.free {
-    background-color: var(--free);
-  }
-
-  &.busy {
-    background-color: var(--busy);
-  }
-
 }
