--- a/src/js/components/Main/Main.css
+++ b/src/js/components/Main/Main.css
@@ -22,3 +22,14 @@
 .background {
   position: absolute;
 }
+
+h1 {
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 200;
+}
+.room-name {
+  position: absolute;
+  z-index: 1;
+  margin-left: 30px;
+}
