--- a/src/js/components/TimeSelector/timeSelector.css
+++ b/src/js/components/TimeSelector/timeSelector.css
@@ -11,3 +11,14 @@ select{
   margin-left: 10px;
   padding-left: 10px;
 }
+
+.btn {
+  border: 3px solid white;
+  background: none;
+  box-shadow: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 16px 36px;
+  font-size: 24px;
+  margin-top: 30px;
+}
