--- a/src/js/calendarApp.css
+++ b/src/js/calendarApp.css
@@ -25,3 +25,19 @@
   }
 
 }
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+html, body, #app {
+  height: 100%;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.2em;
+  margin: 0;
+  padding: 0;
+}
