--- a/src/js/components/Info/info.css
+++ b/src/js/components/Info/info.css
@@ -4,7 +4,7 @@
   font-weight: 200;
   padding: 0px;
 }
-  
+
 .time {
   text-transform: uppercase;
   font-weight: bold;
@@ -17,7 +17,7 @@
   line-height: 90px;
 }
 
-.user {
+.meeting-owner {
   font-size: 30px;
   font-weight: 200;
   margin-top: 5px;
