--- a/src/js/components/MainContainer/mainContainer.css
+++ b/src/js/components/MainContainer/mainContainer.css
@@ -7,7 +7,7 @@
   position: relative;
   letter-spacing: 0;
 }
-.info-container {
+.status-container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -30,12 +30,6 @@ h1 {
   font-size: 32px;
   font-weight: 200;
 }
-.room-name {
-  position: absolute;
-  z-index: 1;
-  margin-left: 30px;
-}
-
 .animation {
   position: absolute;
 }
